--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@
   text-align: center;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: #26282C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 2em;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -31,12 +42,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
